--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
   <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
+
+  <audio id="movementSound">
+    <source src="audio/movement_sound.m4a" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
+
   <div id="game">
     <div id="dodger" style="bottom: 0px; left: 180px;"></div>
   </div>
   <script type="text/javascript" src="index.js"></script>
+
+
+
 </body>
 </html>
